--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    </head>
    <body>
       <div class="container">
-         <img src="ui/loading.gif" width="300"
+         <img src="sys/ui/loading.gif" width="300"
          </div>
          <div class="text">
             Starting VlaicuOS
