--- a/sys/index.html
+++ b/sys/index.html
@@ -3,13 +3,13 @@
 <head> 
 	<meta charset="utf-8">
 	<title>7.1.0039</title> 
-	<meta name="description" content="HTML5 Metro Theme" />
+	<meta name="description" content="VlaicuOS" />
 	<meta name="author" content="Vlaicu Inc" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-	<link rel="stylesheet" type="text/css" media="all" href="sys/css/html5-metro-theme.css" />
-	<script src="sys/js/jquery.min.js"></script>
-	<script src="sys/js/jquery.plugins.min.js"></script>
-	<script src="sys/js/html5-metro-theme.js"></script>
+	<link rel="stylesheet" type="text/css" media="all" href="css/html5-metro-theme.css" />
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.plugins.min.js"></script>
+	<script src="js/html5-metro-theme.js"></script>
 	<!--[if lt IE 9]>
 		<script src="js/respond.min.js"></script>
 	<![endif]-->
@@ -28,11 +28,11 @@
 		</div>
 		<div class="content clearfix">
 			<div class="items">
-				<a class="box" href="pages/builtinMetroApps/METRO_settengs/mainpage.html" style="background: #6b6b6b;">
+				<a class="box" href="../pages/builtinMetroApps/METRO_settengs/mainpage.html" style="background: #6b6b6b;">
 					<span>Settings</span>
 					<img class="icon" src="sys/images/settings.png" alt="" />
 				</a>
-				<a class="box" href="pages/builtinMetroApps/METRO_music/mainpage.html" style="background: #00aeef;">
+				<a class="box" href="../pages/builtinMetroApps/METRO_music/mainpage.html" style="background: #00aeef;">
 					<span>Music</span>
 					<img class="icon" src="sys/images/music.png" alt="" />
 				</a>
