--- a/sys/index.html
+++ b/sys/index.html
@@ -28,11 +28,11 @@
 		</div>
 		<div class="content clearfix">
 			<div class="items">
-				<a class="box" href="../pages/builtinMetroApps/METRO_settengs/mainpage.html" style="background: #6b6b6b;">
+				<a class="box" href="pages/builtinMetroApps/METRO_settengs/mainpage.html" style="background: #6b6b6b;">
 					<span>Settings</span>
 					<img class="icon" src="sys/images/settings.png" alt="" />
 				</a>
-				<a class="box" href="../pages/builtinMetroApps/METRO_music/mainpage.html" style="background: #00aeef;">
+				<a class="box" href="pages/builtinMetroApps/METRO_music/mainpage.html" style="background: #00aeef;">
 					<span>Music</span>
 					<img class="icon" src="sys/images/music.png" alt="" />
 				</a>
