--- a/sys/index.html
+++ b/sys/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="VlaicuOS" />
 	<meta name="author" content="Vlaicu Inc" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-	<link rel="stylesheet" type="text/css" media="all" href="html5-metro-theme.css" />
+	<link rel="stylesheet" type="text/css" media="all" href="style/html5-metro-theme.css" />
 	<script src="js/jquery.min.js"></script>
 	<script src="js/jquery.plugins.min.js"></script>
 	<script src="js/html5-metro-theme.js"></script>
