--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
 <script>
     setTimeout(function() {
-        window.location.href = 'index.html';
+        window.location.href = 'kernel.html';
     }, 3000);</script>
    </body>
 </html>
