--- a/index.html
+++ b/index.html
@@ -1,46 +1,55 @@
-﻿<!doctype html>
-<html lang="en">
-<head> 
-	<meta charset="utf-8">
-	<title>8.0.0046</title> 
-	<meta name="author" content="Vlaicu Inc" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
-	<link rel="stylesheet" type="text/css" media="all" href="sys/css/theme.css" />
-	<script src="sys/js/jquery.min.js"></script>
-	<script src="sys/js/jquery.plugins.min.js"></script>
-	<script src="sys/js/theme.js"></script>
-	<!--[if lt IE 9]>
-		<script src="js/respond.min.js"></script>
-	<![endif]-->
-</head> 
-<body>
-	<div class="html5-metro-layout horizontal">
-		<div class="header">
-			<h1>VlaicuOS Zeta</h1>
-			<div class="controls">
-				<span class="down" title="Scroll down"></span>
-				<span class="up" title="Scroll up"></span>
-				<span class="next" title="Scroll left"></span>
-				<span class="prev" title="Scroll right"></span>
-				<span class="toggle-view" title="Toggle layout"></span>
-			</div>
-		</div>
-		<div class="content clearfix">
-			<div class="items">
-				<a class="box" href="pages/builtinMetroApps/METRO_settengs/mainpage.html" style="background: #6b6b6b;">
-					<span>Settings</span>
-					<img class="icon" src="sys/images/settings.png" alt="" />
-				</a>
-				<a class="box" href="pages/builtinMetroApps/METRO_music/mainpage.html" style="background: #00aeef;">
-					<span>Music</span>
-					<img class="icon" src="sys/images/music.png" alt="" />
-				</a>
-				<a class="box height2" href="https://github.com/Vovo4k/Vlaicu-OS" style="background: #43b51f;">
-					<span>Source Code</span>
-					<img class="icon big" src="sys/images/source-code.png" alt="" />
-				</a>
-			</div>
-		</div>
-	</div>
-</body>
+<html>
+  <head>
+    <title>Build 46</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
+    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="plugs/jq-ui.css" type="text/css">
+    <script src="plugs/jq-3.5.1.js"></script>
+    <script src="plugs/jq-ui.js"></script>
+    <script src="plugs/jq-tp.js"></script>
+    <script src="code.js"></script>
+  
+  </head>
+  <body>
+    <div id="progman" class="window selectedwindow" style="position: absolute; top: 250px; left: 150px; width: 500px; height: 300px; z-index: 2">
+      <div class="windowheader">
+        <div class="windowclose"></div>
+        <div class="windowtitle">Program Manager</div>
+      </div>
+      <div class="windowinner">
+        <div class="fullwindowicons">
+          <div class="icon" ondblclick="newWindow('#write')">
+            <img src="icdll32/write.png">
+            <p>Write</p>
+          </div>
+          <div class="icon" ondblclick="newWindow('#doom')">
+            <img src="icdll32/doom.png">
+            <p>DOOM</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="write" class="window" style="position: absolute; top: 150px; left: 400px; width: 500px; height: 400px; z-index: 3; display: none;">
+      <div class="windowheader">
+        <div class="windowclose"></div>
+        <div class="windowtitle">Write - TEXTBO~1.WRI</div>
+      </div>
+      <div class="windowinner">
+        <textarea class="fullwindowtextarea">Yo what up this is a text box</textarea>
+      </div>
+    </div>
+
+
+    <div id="doom" class="window" style="position: absolute; top: 150px; left: 150px; width: 640px; height: 480px; z-index: 6; display: none">
+      <div class="windowheader">
+        <div class="windowclose"></div>
+        <div class="windowtitle">DOOM</div>
+      </div>
+      <div class="windowinner">
+        <canvas id="doomcanvas"></canvas>
+      </div>
+    </div>
+  </body>
 </html>
